deploy/new-jersey/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: speedtest-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: speedtest-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.3.0/24
    ports:
    - port: 8443
      protocol: TCP
    - port: 8082
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 9090
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8081
      protocol: UDP
